[gd_scene load_steps=9 format=2]

[ext_resource path="res://WndLevels.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/wnd_main_background2.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/wnd_levels.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/radio_selected.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/radio_unselected.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/btn_previous.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/btn_next.png" type="Texture" id=7]
[ext_resource path="res://BtnLevel.tscn" type="PackedScene" id=8]

[node name="WndLevels" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Mouse", "Pause", "Rect", "Visibility" ]
options = [  ]
pageIdx = 0

[node name="background" type="Sprite" parent="." index="0"]

modulate = Color( 0.352941, 0.352941, 0.352941, 1 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Visibility" ]

[node name="wnd" type="Sprite" parent="." index="1"]

texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="page1" type="Sprite" parent="wnd" index="0"]

position = Vector2( -111.111, 622.222 )
texture = ExtResource( 4 )

[node name="page2" type="Sprite" parent="wnd" index="1"]

position = Vector2( 0, 622.222 )
texture = ExtResource( 5 )

[node name="page3" type="Sprite" parent="wnd" index="2"]

position = Vector2( 106.667, 622.222 )
texture = ExtResource( 5 )

[node name="btnPrevious" type="TextureButton" parent="wnd" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -444.0
margin_top = 533.0
margin_right = -273.0
margin_bottom = 705.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
_sections_unfolded = [ "Textures" ]

[node name="btnNext" type="TextureButton" parent="wnd" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 249.0
margin_top = 533.0
margin_right = 420.0
margin_bottom = 705.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 7 )
_sections_unfolded = [ "Textures" ]

[node name="levels" type="Node2D" parent="wnd" index="5"]

position = Vector2( -640, -800 )

[node name="level1" parent="wnd/levels" index="0" instance=ExtResource( 8 )]

position = Vector2( 240, 400 )
scale = Vector2( 0.9, 0.9 )
labelName = "1"
numStars = 1
option = {

}

[node name="level2" parent="wnd/levels" index="1" instance=ExtResource( 8 )]

position = Vector2( 528, 400 )
scale = Vector2( 0.9, 0.9 )
labelName = "2"
numStars = 2
option = {

}

[node name="level3" parent="wnd/levels" index="2" instance=ExtResource( 8 )]

position = Vector2( 816, 400 )
scale = Vector2( 0.9, 0.9 )
labelName = "3"
option = {

}

[node name="level4" parent="wnd/levels" index="3" instance=ExtResource( 8 )]

position = Vector2( 240, 656 )
scale = Vector2( 0.9, 0.9 )
labelName = "4"
numStars = -1
option = {

}

[node name="level5" parent="wnd/levels" index="4" instance=ExtResource( 8 )]

position = Vector2( 528, 656 )
scale = Vector2( 0.9, 0.9 )
labelName = "5"
numStars = 0
option = {

}

[node name="level6" parent="wnd/levels" index="5" instance=ExtResource( 8 )]

position = Vector2( 816, 656 )
scale = Vector2( 0.9, 0.9 )
labelName = "6"
option = {

}

[node name="level7" parent="wnd/levels" index="6" instance=ExtResource( 8 )]

position = Vector2( 240, 928 )
scale = Vector2( 0.9, 0.9 )
labelName = "7"
option = {

}

[node name="level8" parent="wnd/levels" index="7" instance=ExtResource( 8 )]

position = Vector2( 528, 928 )
scale = Vector2( 0.9, 0.9 )
labelName = "8"
option = {

}

[node name="level9" parent="wnd/levels" index="8" instance=ExtResource( 8 )]

position = Vector2( 816, 928 )
scale = Vector2( 0.9, 0.9 )
lock = true
labelName = "9"
option = {

}


